--- a/package.json
+++ b/package.json
@@ -10,14 +10,32 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "analyze": "cross-env ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
+    "@mdx-js/mdx": "^1.0.15",
+    "@mdx-js/react": "^1.0.15",
     "gatsby": "^2.3.16",
+    "gatsby-background-image": "^0.4.3",
+    "gatsby-image": "^2.0.41",
+    "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-emotion": "^4.0.6",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
+    "gatsby-remark-images": "^3.0.11",
+    "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-instagram": "^0.5.0",
+    "gatsby-transformer-sharp": "^2.1.18",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "prettier": "^1.17.0"
   },
   "repository": {
